--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{github.actor}}
-          password: ${{secrets.PAT_TOKEN}}
+          password: ${{secrets.GITHUB_TOKEN}}  
       -
         name: Build and push
         uses: docker/bake-action@v4.3.0
